Basic blocking of index
Created basic sections with id's for landing page

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -1,4 +1,19 @@
 <!doctype html>
-
-
+   <section id = "hero">
+      <!-- logo, slogan, and team name -->
+   </section>
+   <section id = "personal-pages">
+      <!-- all four links to our personal resumes along with pictures and descriptions -->
+      <div id = "Alana-personal">
+      </div>
+      <div id = "Jacob-personal">
+      </div>
+      <div id = "Jasmine-personal">
+      </div>
+      <div id = "Connor-personal">
+      </div>
+   </section>
+   <section id = "previous-works">
+      <!-- our team's "previous works," which will impress our clients -->
+   </section>
 </html>
