--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -1,4 +1,11 @@
 <!doctype html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Home</title>
+   <link rel="stylesheet" href="styles.css">
+</head>
    <section id = "hero">
       <!-- logo, slogan, and team name -->
    </section>
