added logo to homepage

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -8,6 +8,7 @@
 </head>
    <section id = "hero">
       <!-- logo, slogan, and team name -->
+      <img src="src/img/Jac Logo red.png" alt="logo" id="corner-logo">
    </section>
    <section id = "personal-pages">
       <!-- all four links to our personal resumes along with pictures and descriptions -->
