--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -12,12 +12,13 @@
    <section id = "personal-pages">
       <!-- all four links to our personal resumes along with pictures and descriptions -->
       <div id = "Alana-personal">
-      </div>
-      <div id = "Jacob-personal">
+         <img src="src/img/AlanaBarth.jpg" alt="Alana profile picture">
       </div>
       <div id = "Jasmine-personal">
+         <img src="src/img/jfilawo.jpg" alt="Alana profile picture">
       </div>
       <div id = "Connor-personal">
+         <img src="src/img/connor.jpg" alt="Alana profile picture">
       </div>
    </section>
    <section id = "previous-works">
