Continued styling of home

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -12,6 +12,7 @@
    </section>
    <section id = "personal-pages">
       <!-- all four links to our personal resumes along with pictures and descriptions -->
+      <h1>Meet the team</h1>
       <div id = "Alana-personal">
          <img src="src/img/AlanaBarth.jpg" alt="Alana profile picture">
       </div>
