more style on home

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -10,9 +10,9 @@
       <!-- logo, slogan, and team name -->
       <img src="src/img/Jac Logo red.png" alt="logo" id="corner-logo">
    </section>
+   <h1 id="greeting">Meet the team</h1>
    <section id = "personal-pages">
       <!-- all four links to our personal resumes along with pictures and descriptions -->
-      <h1>Meet the team</h1>
       <div id = "Alana-personal">
          <img src="src/img/AlanaBarth.jpg" alt="Alana profile picture">
       </div>
