style of resume
moving things around with css

--- a/Lab 1/connor-resume.html
+++ b/Lab 1/connor-resume.html
@@ -12,7 +12,7 @@
    </div>
 
    <section id="resume">
-      <div id="basic-info">
+      <div>
          <h3>Connor Silloway</h3>
          <p>address</p>
          <p>(603) 327-5899</p>
@@ -53,7 +53,19 @@
          <p>summer of 2018 and 2019</p>
          <p>Worked inside the farm stand, dealing with customer service as well as picked various fruits and vegetables on the farm.</p>
       </div>
-
+   </section>
+   <section id="skills">
+      <h4>Skills</h4>
+      <ul>
+         <li>html5</li>
+         <li>css3</li>
+         <li>javascript</li>
+         <li>php</li>
+         <li>Mariadb</li>
+         <li>python</li>
+         <li>C++</li>
+         <li>C</li>
+      </ul>
    </section>
 </body>
 
