--- a/Lab 1/connor-resume.html
+++ b/Lab 1/connor-resume.html
@@ -57,14 +57,14 @@
    <section id="skills">
       <h4>Skills</h4>
       <ul>
-         <li>html5</li>
-         <li>css3</li>
-         <li>javascript</li>
-         <li>php</li>
-         <li>Mariadb</li>
-         <li>python</li>
-         <li>C++</li>
-         <li>C</li>
+         <li><p>html5</p></li>
+         <li><p>css3</p></li>
+         <li><p>javascript</p></li>
+         <li><p>php</p></li>
+         <li><p>Mariadb</p></li>
+         <li><p>python</p></li>
+         <li><p>C++</p></li>
+         <li><p>C</p></li>
       </ul>
    </section>
 </body>
