--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -21,7 +21,7 @@
          <img src="src/img/jfilawo.jpg" alt="Alana profile picture">
       </div>
       <div id = "Connor-personal">
-         <img src="src/img/connor.jpg" alt="Alana profile picture">
+         <a href="connor-resume.html"><img src="src/img/connor.jpg" alt="Alana profile picture"></a>
       </div>
    </section>
    <section id = "previous-works">
