nav bar and hero section
fixed tags for header and nav bar, as well as styled the hero section/splash page on index

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -8,19 +8,23 @@
 </head>
    <section id = "hero">
       <!-- logo, slogan, and team name -->
-      <img src="src/img/Jac Logo red.png" alt="logo" id="corner-logo">
+      <img src="src/img/Jac Logo red.png" alt="logo">
+      <h1>We make the web better</h1>
    </section>
    <h1>Meet the team</h1>
    <section id = "personal-pages">
       <!-- all four links to our personal resumes along with pictures and descriptions -->
       <div id = "Jasmine-personal">
          <img src="src/img/jfilawo.jpg" alt="Alana profile picture">
+         <h4>Jasmine</h4>
       </div>
       <div id = "Alana-personal">
          <img src="src/img/AlanaBarth.jpg" alt="Alana profile picture">
+         <h4>Alana Barth</h4>
       </div>
       <div id = "Connor-personal">
          <a href="connor-resume.html"><img src="src/img/connor.jpg" alt="Alana profile picture"></a>
+         <h4>Connor Silloway</h4>
       </div>
    </section>
    <section id = "previous-works">
