--- a/Lab 1/connor-resume.html
+++ b/Lab 1/connor-resume.html
@@ -6,11 +6,11 @@
    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-   <div class="nav-bar">
-      <a href="index.html"><img src="src/img/placeholder.jpg" alt="logo placeholder" id="corner-logo"></a>
-      <a href="index.html"><button type="button" name="home" id="personal-home">Home</button></a>
-   </div>
-
+   <header>
+      <nav>
+         <a href="index.html"><img src="src/img/Jac Logo red.png" alt="logo-anchor"></a>
+      </nav>
+   </header>
    <section id="resume">
       <div>
          <h3>Connor Silloway</h3>
