microformat and past works
microformats for my individual page and groundwork for group's previous works

--- a/Lab 1/connor-resume.html
+++ b/Lab 1/connor-resume.html
@@ -12,14 +12,20 @@
       </nav>
    </header>
    <section id="resume">
-      <div>
-         <h3>Connor Silloway</h3>
-         <p>address</p>
-         <p>(603) 327-5899</p>
-         <a href="mailto:silloc@rpi.edu">silloc@rpi.edu</a>
-         <p>objective statement/intro</p>
-      </div>
-      <div><img src="./src/img/connor.jpg" alt="Connor Silloway photo"></div>      
+      <div class="vcard">
+         <h3 class="fn">Connor Silloway</h3>
+         <div class="adr">
+            <span class="street-address"><p>1999 Burdett Ave</p></span>
+            <p><span class="locality">Troy</span>,
+            <abbr class="region" title="New York">NY</abbr>,
+            <span class="postal-code">12180</span>
+            <span class="country-name">U.S.A</span></p>
+         </div>
+         <p class="tel">(603) 327-5899</p>
+         <a class="email" href="mailto:silloc@rpi.edu">silloc@rpi.edu</a>
+         <p class="note">I will provide </p>
+         <img class="photo" src="./src/img/connor.jpg" alt="Connor Silloway photo">
+      </div>     
    </section>
    <section id="experience">
       <h2>Education</h2>
