--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -11,12 +11,12 @@
       <img src="src/img/Jac Logo red.png" alt="logo">
       <h1>We make the web better</h1>
    </section>
-   <h1>Meet the team</h1>
+   <h1 class="text-center">Meet the team</h1>
    <section id = "personal-pages">
       <!-- all four links to our personal resumes along with pictures and descriptions -->
       <div id = "Jasmine-personal">
          <img src="src/img/jfilawo.jpg" alt="Alana profile picture">
-         <h4>Jasmine</h4>
+         <h4>Jasmine Filawo</h4>
       </div>
       <div id = "Alana-personal">
          <img src="src/img/AlanaBarth.jpg" alt="Alana profile picture">
@@ -27,7 +27,23 @@
          <h4>Connor Silloway</h4>
       </div>
    </section>
+   <h1 class="text-center">Our Previous Works</h1>
    <section id = "previous-works">
       <!-- our team's "previous works," which will impress our clients -->
+      <div>
+         <h2>Connor's personal website</h2>
+         <img src="src/img/connor-work.PNG" alt="">
+         <p>description</p>
+      </div>
+      <div>
+         <h2>title</h2>
+         <img src="src/img/Jac Logo red.png" alt="">
+         <p>description</p>
+      </div>
+      <div>
+         <h2>title</h2>
+         <img src="src/img/Jac Logo red.png" alt="">
+         <p>description</p>
+      </div>
    </section>
 </html>
