completed one of JAC's previous works

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -32,8 +32,9 @@
       <!-- our team's "previous works," which will impress our clients -->
       <div>
          <h2>Connor's personal website</h2>
-         <img src="src/img/connor-work.PNG" alt="">
-         <p>description</p>
+         <a href="https://connor-silloway.netlify.app/index.html"><img src="src/img/connor-work.PNG" alt="Connor-personal-website"></a>
+         <p>Our team decided that Connor needed a personal website in addition to the resume he has on this site.
+            This website will display any personal projects that Connor works on (nothing involved with JAC).</p>
       </div>
       <div>
          <h2>title</h2>
