--- a/Lab 1/connor-resume.html
+++ b/Lab 1/connor-resume.html
@@ -1,21 +1,22 @@
-<!doctype html> 
+<!doctype html>
+<html lang="en">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Connor-Resume</title>
+   <title>Connor Silloway Personal Page</title>
    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
    <header>
       <nav>
-         <a href="index.html"><img src="src/img/Jac Logo red.png" alt="logo-anchor"></a>
+         <a href="index.html"><img src="src/img/Jac-Logo-red.png" alt="logo-anchor"></a>
       </nav>
    </header>
    <section id="resume">
       <div class="vcard">
          <h3 class="fn">Connor Silloway</h3>
          <div class="adr">
-            <span class="street-address"><p>1999 Burdett Ave</p></span>
+            <p><span class="street-address">1999 Burdett Ave</span></p>
             <p><span class="locality">Troy</span>,
             <abbr class="region" title="New York">NY</abbr>,
             <span class="postal-code">12180</span>
@@ -23,7 +24,7 @@
          </div>
          <p class="tel">(603) 327-5899</p>
          <a class="email" href="mailto:silloc@rpi.edu">silloc@rpi.edu</a>
-         <p class="note">I will provide </p>
+         <p class="note">I am a sophomore in college ready to learn and adapt to anything my emplpoyer throws at me</p>
          <img class="photo" src="./src/img/connor.jpg" alt="Connor Silloway photo">
       </div>     
    </section>
