--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -8,7 +8,7 @@
 </head>
    <section id = "hero">
       <!-- logo, slogan, and team name -->
-      <img src="src/img/Jac Logo red.png" alt="logo">
+      <img src="src/img/Jac-Logo-red.png" alt="logo">
       <h1>We make the web better</h1>
    </section>
    <h1 class="text-center">Meet the team</h1>
@@ -19,7 +19,7 @@
          <h4>Jasmine Filawo</h4>
       </div>
       <div id = "Alana-personal">
-         <a href="Alana-Resume.html"><img src= "src/img/AlanaBarth.jpg" alt="Alana profile picture"></img></a>
+         <a href="Alana-Resume.html"><img src= "src/img/AlanaBarth.jpg" alt="Alana profile picture"></a>
          <h4>Alana Barth</h4>
       </div>
       <div id = "Connor-personal">
@@ -38,12 +38,12 @@
       </div>
       <div>
          <h2>title</h2>
-         <img src="src/img/Jac Logo red.png" alt="">
+         <img src="src/img/Jac-Logo-red.png" alt="">
          <p>description</p>
       </div>
       <div>
          <h2>title</h2>
-         <img src="src/img/Jac Logo red.png" alt="">
+         <img src="src/img/Jac-Logo-red.png" alt="">
          <p>description</p>
       </div>
    </section>
