--- a/Lab 1/Alana-Resume.html
+++ b/Lab 1/Alana-Resume.html
@@ -11,7 +11,7 @@
 <body>
    <header>
       <nav>
-         <a href="index.html"><img src="src/img/Jac Logo red.png" alt="logo-anchor"></a>
+         <a href="index.html"><img src="src/img/Jac-Logo-red.png" alt="logo-anchor"></a>
       </nav>
    </header>
    <img id="profile" src="src/img/AlanaBarth.jpg" alt="profile photo">
