added microformat and previous work
added microformat to my resume page and the fitness tracker description to previous works

--- a/Lab 1/Alana-Resume.html
+++ b/Lab 1/Alana-Resume.html
@@ -19,15 +19,17 @@
       <p>Alana Barth</p>
    </div>
 
-   <ul id="contactInfo">
-      <li><strong>Cell #</strong></li>
-      <li>(203) 832-6684</li>
-      <li><strong>address</strong></li>
-      <li>248 Sun Dance Rd</li>
-      <li>Stamford, CT 06905</li>
-      <li><strong>email</strong></li>
-      <li><a href = "mailto: bartha4@rpi.edu">bartha4@rpi.edu</a></li>
-   </ul>
+   <div class="hcard">
+      <div class="adr">
+         <span class="street-address"><p>2014 14th Street</p></span>
+         <p><span class="locality">Troy</span>,
+         <abbr class="region" title="New York">NY</abbr>,
+         <span class="postal-code">12180</span>
+         <span class="country-name">U.S.A</span></p>
+      </div>
+      <p class="tel">(203) 832- 6684</p>
+      <a class="email" href="mailto:bartha4@rpi.edu">bartha4@rpi.edu</a>
+   </div>     
 
    <div class="subSectionHeader">
       <p><strong><u>Intro:</u></strong></p>
