--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -37,9 +37,9 @@
             This website will display any personal projects that Connor works on (nothing involved with JAC).</p>
       </div>
       <div>
-         <h2>title</h2>
-         <img src="src/img/Jac-Logo-red.png" alt="">
-         <p>description</p>
+         <h2>The Fitness Tracker</h2>
+         <img src="src/img/thefitnesstracker.jpg" alt="Alana's Previous Work">
+         <p>All in one webpage for physical health: Calorie recommendations, Food recommendations, Workout and gym recommendations, and Comparison page </p>
       </div>
       <div>
          <h2>title</h2>
