--- a/Lab 1/Alana-Resume.html
+++ b/Lab 1/Alana-Resume.html
@@ -14,11 +14,14 @@
          <a href="index.html"><img src="src/img/Jac-Logo-red.png" alt="logo-anchor"></a>
       </nav>
    </header>
+   
+   <!--Profile Picture-->
    <img id="profile" src="src/img/AlanaBarth.jpg" alt="profile photo">
    <div id="h1">
       <p>Alana Barth</p>
    </div>
 
+   <!--Contact information using microformats-->
    <div class="hcard">
       <div class="adr">
          <span class="street-address"><p>2014 14th Street</p></span>
@@ -38,7 +41,7 @@
       <p>I want to combine my interest in Information Technology and Finance to help companies change the world.</p>
    </div>
 
-   <!--Education of my resume-->
+   <!--Education part of my resume-->
    <div class="subSectionHeader">
       <p><strong><u>Education:</u></strong></p>
    </div>
@@ -56,6 +59,7 @@
       <p>August 2014 - June 2018</p>
    </div>
 
+   <!--Work Experience part of my resume-->
    <div class="subSectionHeader">
       <p><strong><u>Work Experience:</u></strong></p>
    </div>
