linked Jasmine's resume

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -15,7 +15,7 @@
    <section id = "personal-pages">
       <!-- all four links to our personal resumes along with pictures and descriptions -->
       <div id = "Jasmine-personal">
-         <img src="src/img/jfilawo.jpg" alt="Alana profile picture">
+         <a href="individualport.html"><img src="src/img/jfilawo.jpg" alt="Alana profile picture"></a>
          <h4>Jasmine Filawo</h4>
       </div>
       <div id = "Alana-personal">
