added nav to Jasmine

--- a/Lab 1/individualport.html
+++ b/Lab 1/individualport.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="styles.css"/>
   </head>
     <body>
+      <header>
+        <nav>
+           <a href="index.html"><img src="src/img/Jac-Logo-red.png" alt="logo-anchor"></a>
+        </nav>
+     </header>
       <div id= jasmine>
         <div id= name>
         <p><span class="fn">Jasmine Filawo</span></p>
