--- a/Lab 1/Alana-Resume.html
+++ b/Lab 1/Alana-Resume.html
@@ -14,7 +14,7 @@
          <a href="index.html"><img src="src/img/Jac-Logo-red.png" alt="logo-anchor"></a>
       </nav>
    </header>
-   
+
    <!--Profile Picture-->
    <img id="profile" src="src/img/AlanaBarth.jpg" alt="profile photo">
    <div id="h1">
@@ -24,7 +24,7 @@
    <!--Contact information using microformats-->
    <div class="hcard">
       <div class="adr">
-         <span class="street-address"><p>2014 14th Street</p></span>
+         <p><span class="street-address">2014 14th Street</span></p>
          <p><span class="locality">Troy</span>,
          <abbr class="region" title="New York">NY</abbr>,
          <span class="postal-code">12180</span>
@@ -98,7 +98,7 @@
 
    <!--Skills-->
    <div class="subSectionHeader">
-      <p><strong><u>Technical Skills:</u></strong></ps>
+      <p><strong><u>Technical Skills:</u></strong></p>
    </div>
    <div id="Alana-skills">
       <p>Languages: familiar in python, c++, c, HTML, SQL, JavaScript, CSS, and MIPS.<br> Microsoft Suite, Google
