Added an image to the homepage.
This image was the previous work that I did.

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -42,6 +42,12 @@
          <p>All in one webpage for physical health: Calorie recommendations, Food recommendations, Workout and gym recommendations, and Comparison page </p>
       </div>
       <div>
+         <h2>Mental Health for Students</h2>
+         <img src="src/img/previouswork.png" alt="Jasmine's Previous Work">
+         <p>The purpose of this website was to provide suggestions on how college students can balance time for their academics and themselves, in order to improve their mental health while in school.</p>
+      </div>
+
+      <div>
          <h2>title</h2>
          <img src="src/img/Jac-Logo-red.png" alt="">
          <p>description</p>
