README and comments

--- a/Lab 1/connor-resume.html
+++ b/Lab 1/connor-resume.html
@@ -8,11 +8,13 @@
 </head>
 <body>
    <header>
+      <!-- navagation bar -->
       <nav>
          <a href="index.html"><img src="src/img/Jac-Logo-red.png" alt="logo-anchor"></a>
       </nav>
    </header>
    <section id="resume">
+      <!-- microformatting, specifically hCard -->
       <div class="vcard">
          <h3 class="fn">Connor Silloway</h3>
          <div class="adr">
@@ -29,6 +31,7 @@
       </div>     
    </section>
    <section id="experience">
+      <!-- school and work experience, including links to websites -->
       <h2>Education</h2>
       <div>
          <h4><a href="https://www.bghs.org/">Bishop Guertin High School</a></h4>
@@ -62,6 +65,7 @@
       </div>
    </section>
    <section id="skills">
+      <!-- Skills pertaining to web development or coding enviornments -->
       <h4>Skills</h4>
       <ul>
          <li><p>html5</p></li>
