--- a/Lab 1/individualport.html
+++ b/Lab 1/individualport.html
@@ -1,33 +1,36 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>Jasmine Filawo's Resume</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="styles.css"/>
-  </head>
+<!doctype html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Jasmine Filawo's Resume</title>
+   <link rel="stylesheet" href="styles.css">
     <body>
       <header>
         <nav>
+          <!--logo for our team-->
            <a href="index.html"><img src="src/img/Jac-Logo-red.png" alt="logo-anchor"></a>
         </nav>
      </header>
+     <!--used li tags to have bullet points on myb resume-->
       <div id= jasmine>
         <div id= name>
         <p><span class="fn">Jasmine Filawo</span></p>
       </div>
+      <!--microformats with my contact information-->
         <div class= contact >
           <p><a class= "email" href= "mailto:jfilawo1885@gmail.com">jfilawo1885@gmail.com</a></p>
           <p><span class="locality"> 110 8th St, Troy, NY 12180</span></p>
           <p><span class= "tel">224-730-6065</span></p>
         </div> 
-
+          <!--class for my objective statement/intro-->
             <p class="objectives">This page here is a displayment of my recent academic and career accomplishments.</p>
-      </h1>
       <div id="center">
+        <!--my profile picture for my resume-->
         <img src="src/img/jfilawo.jpg" alt="profile image">
       </div>
                 <!-- ul stands for unordered list and li is list -->
-                  <!-- EDUCATION is underlined -->
+                  <!-- This contains information on m educational background, where I went to high school/university -->
                 <h2>EDUCATION</h2>
                 <div class="resume"> 
                <a href="https://www.lfanet.org/"><p> Lake Forest Academy Lake Forest, IL (Highschool 2015-2019)</p></a>
@@ -35,8 +38,9 @@
                     <p>B.S. Business Management										GPA:  3.42/4.0</p>
                     <p>Concentration: Management Information Systems Minor: Information Technology and Web Science</p>
                   </div>
-
+                    <!--here is where I share my internship experience and volunteer work I do-->
                     <h2>WORK EXPERIENCE</h2>
+                    <!--made a work section to bold only this line-->
                       <p class="work">IBM Developer Ecosystems Group (DEG) | San Francisco, California | Intern 		             May 2021-August 2021                               (Fall 2019)</p>
                       <p>Member of eight-person, cross-functional team of developer advocates, engineering managers, and program managers that develops technology-focused initiatives to combat racial injustices </p>
                       <ul>
@@ -48,6 +52,7 @@
                         <li>Led development of virtual community among interns by creating game nights about San Francisco’s history</li>
                         <li>Drafted webpage ideas for CFCFRJ websites using CSS and HTML, displaying timeline of Black history and current events for the Black communit</li>
                       </ul>
+                      <!--used the assistant class to separate it from work class, I only wanted to bold this line-->
                     <p class= "assistant">Malaika | DR Congo | Youth Ambassador and Development Assistant           		        November 2017 – Present</p>
                     <p>Representative of organization transforming lives of 5000+ women in Kalebuka, DR Congo with education and healthcare </p>
                     <ul>
@@ -59,6 +64,7 @@
                   <!-- SKILLS is underlined -->
                    <!-- LEADERSHIP is underlined -->
                 <h2>LEADERSHIP</h2>
+                <!--only wanted to bold my position and the club-->
                   <p class="title">Black Students' Alliance (BSA)</p>
                   <p class="titles">Alumni Chair                                          (February 2020)</p>
                   <ul>
@@ -66,7 +72,7 @@
                     <li>Maintained relationships with 250+ alumni which encourages attendance to large-scale BSA events including the Ebony Ball and BSA Fashion Show</li>
                     <li>Designed monthly newsletter to advertise, promote, and showcase BSA events to alumni</li>
                   </ul>
-
+                    <!--more titles and involvements-->
                     <p class= "manager">Events Manager                                                   (August 2020-present)</p>
                     <ul>
                         <li>Created new collaborative BSA events to celebrate Black history and culture, increasing engagement of 30+ general body</li>
@@ -81,6 +87,7 @@
                     </ul>
 
                 <h2>SKILLS</h2>
+                <!--created li tags for the skills section-->
                 <ul>
                   <li>Software: Java, Python, Tableau, Microsoft Office, Microsoft Excel, Microsoft Access, and Microsoft PowerPoint</li>
                   <li>Language: French, Spanish, English, and Lingala</li>  
@@ -90,6 +97,4 @@
                   
                   <!-- EXPERIENCE is underlined -->
                     <!-- ACHIEVEMENTS is underlined -->            
-
     </body>
-</div>
