--- a/Lab 1/individualport.html
+++ b/Lab 1/individualport.html
@@ -24,7 +24,7 @@
           <p><span class= "tel">224-730-6065</span></p>
         </div> 
           <!--class for my objective statement/intro-->
-            <p class="objectives">This page here is a displayment of my recent academic and career accomplishments.</p>
+            <p class="objectives">Intro: This page here is a displayment of my recent academic and career accomplishments.</p>
       <div id="center">
         <!--my profile picture for my resume-->
         <img src="src/img/jfilawo.jpg" alt="profile image">
