changed link to my personal page

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -19,7 +19,7 @@
          <h4>Jasmine Filawo</h4>
       </div>
       <div id = "Alana-personal">
-         <a href="Alana-Resume.html"><img src= "src/img/AlanaBarth.jpg" alt="Alana profile picture"></a>
+         <a href="bartha4.html"><img src= "src/img/AlanaBarth.jpg" alt="Alana profile picture"></a>
          <h4>Alana Barth</h4>
       </div>
       <div id = "Connor-personal">
