rename resume page (silloc.html)

--- a/Lab 1/index.html
+++ b/Lab 1/index.html
@@ -23,7 +23,7 @@
          <h4>Alana Barth</h4>
       </div>
       <div id = "Connor-personal">
-         <a href="connor-resume.html"><img src="src/img/connor.jpg" alt="Alana profile picture"></a>
+         <a href="silloc.html"><img src="src/img/connor.jpg" alt="Alana profile picture"></a>
          <h4>Connor Silloway</h4>
       </div>
    </section>
