Added work experience.
This was said in the instructions

--- a/Lab 1/filawj.html
+++ b/Lab 1/filawj.html
@@ -61,6 +61,7 @@
                       <li>Completed research on 90+ universities in the US and Africa for high school graduates</li>
                       <li>Increased social media engagement by creating captions for posts about students with strategically chosen hashtags</li>
                     </ul>
+                    <p>Boeing: Kept track of the data and provided that data the manager and others on my team</p>
                   <!-- SKILLS is underlined -->
                    <!-- LEADERSHIP is underlined -->
                 <h2>LEADERSHIP</h2>
